sets up my config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+url: http://francomendoza.github.io
+title: from Antibodies to Arrays
+subtitle: a stream of consciousness
+author: Franco
 simple_search: https://www.google.com/search
 description:
 
