complete first blog post

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: from Antibodies to Arrays
 subtitle: a stream of consciousness
 author: Franco
 simple_search: https://www.google.com/search
-description:
+description: attempting to relate the natural sciences to the science of writing instructions
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
